[tool.poetry]
name = "risk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pygame = "^2.6.0"
pandas = "^2.2.2"
shapely = "^2.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"